# sele

./: .gitignore  ARCHITECTURE.md  EVAL.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  README.md  SKILLS.md  SKILLS_CHECKLIST.md  SKILLS_IMPLEMENTATION.md  pyproject.toml
examples/: README.md
examples/advanced/: 01_custom_tools.md  02_custom_adapters.md  03_benchmarking.md  04_ci_integration.md  README.md
examples/profiles/: 01_minimal_profile.yaml  02_custom_model.yaml  03_bubblewrap_secure.yaml  04_summarize_memory.yaml  05_custom_tools.yaml  06_production.yaml  07_openshell_secure.yaml  README.md
examples/quickstart/: 01_basic_usage.md
examples/servers/: 01_ollama.md  02_vllm.md  03_llama_cpp.md  04_lm_studio.md  05_openrouter.md  README.md
examples/skills/: README.md  custom_skill_example.py
src/sele/: __init__.py  builder.py  cli.py  config.py  eval.py  interfaces.py  registry.py  types.py
src/sele/approval/: policies.py
src/sele/loops/: base.py  plan_execute.py  tool_loop.py
src/sele/memory/: full_history.py  summarize.py
src/sele/models/: _chat_compat.py  llama_cpp_native.py  openai_compat.py
src/sele/profiles/: bubblewrap-local.yaml  context-managed-ollama.yaml  local-llamacpp.yaml  local-ollama.yaml  openrouter.yaml  openshell-local.yaml  reflexion-ollama.yaml  skills-combined-ollama.yaml  summarize-ollama.yaml  vllm.yaml
src/sele/protocols/: native_tools.py  react_text.py
src/sele/sandbox/: __init__.py  _egress.py  bubblewrap.py  host_direct.py  openshell.py
src/sele/skills/: __init__.py  base.py  context_manager.py  reflexion.py
src/sele/tools/: fs.py  http.py  python_exec.py  shell.py
src/sele/tracer/: console.py  jsonl.py  null.py
tests/: test_approval.py  test_bubblewrap_args.py  test_bubblewrap_integration.py  test_chat_compat.py  test_egress_proxy.py  test_end_to_end.py  test_eval.py  test_llama_cpp_native.py  test_loops.py  test_openshell.py  test_protocols.py  test_skills.py  test_summarize_memory.py  test_tools.py  test_tracers.py
