[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sele"
version = "0.1.0"
description = "A pluggable agent harness for open-source models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "nardnahcalab" }]
keywords = ["agent", "llm", "harness", "cli", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
sele = "sele.cli:app"

[project.entry-points."sele.tools"]
shell = "sele.tools.shell:shell"
fs_read = "sele.tools.fs:fs_read"
fs_write = "sele.tools.fs:fs_write"

[project.entry-points."sele.adapters"]
openai_compat = "sele.models.openai_compat:OpenAICompatAdapter"

[project.entry-points."sele.protocols"]
native_tools = "sele.protocols.native_tools:NativeToolsProtocol"
react_text = "sele.protocols.react_text:ReActTextProtocol"

[project.entry-points."sele.loops"]
tool_loop = "sele.loops.tool_loop:ToolLoop"
plan_execute = "sele.loops.plan_execute:PlanExecuteLoop"

[project.entry-points."sele.memory"]
full_history = "sele.memory.full_history:FullHistoryMemory"

[project.entry-points."sele.sandbox"]
host_direct = "sele.sandbox.host_direct:HostDirectSandbox"

[project.entry-points."sele.approval"]
auto = "sele.approval.policies:AutoApproval"
confirm_all = "sele.approval.policies:ConfirmAllApproval"
confirm_destructive = "sele.approval.policies:ConfirmDestructiveApproval"

[project.entry-points."sele.tracer"]
jsonl = "sele.tracer.jsonl:JsonlTracer"
console = "sele.tracer.console:ConsoleTracer"
null = "sele.tracer.null:NullTracer"

[tool.hatch.build.targets.wheel]
packages = ["src/sele"]

[tool.hatch.build.targets.wheel.force-include]
"src/sele/profiles" = "sele/profiles"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
